{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "TankMovement",
            "id": "7a0d6242-496c-4369-a131-a0b12af8f7ed",
            "actions": [
                {
                    "name": "LeftTrack",
                    "type": "Button",
                    "id": "85c2fa8b-a518-4d12-aff3-ef0e7bc1b745",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightTrack",
                    "type": "Button",
                    "id": "8879e828-9e1b-45a1-987b-d747ae58fb6e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "ddc28bfb-5a96-4cdb-ab6e-cb5cbaff9899",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrack",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "50ccdc50-26ae-45b3-80b5-784578776070",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c4be2538-9134-4bb7-80d7-b34d5e108ad9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftTrack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "593cebe4-2fd9-4b7d-9f11-b0f8ccb8cde4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrack",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3f2eea27-9ce7-4ebd-8174-e353c64df142",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrack",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ead983b7-feb9-4f1e-88a8-195a47e2cabb",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightTrack",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}